<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grupo_op"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile"
            android:icon="@drawable/ico_nom" />
        <item
            android:id="@+id/nav_orders"
            android:title="@string/menu_orders"
            android:icon="@drawable/ico_ordenes" />
        <item
            android:id="@+id/nav_favorites"
            android:title="@string/menu_favorites"
            android:icon="@drawable/ico_resenia" />
        <item
            android:id="@+id/nav_reviews"
            android:title="@string/menu_reviews"
            android:icon="@drawable/ico_resenia" />
    </group>
    <item
        android:id="@+id/nav_logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ico_salir" />
</menu>
